# univ3.1_DC_lab6

./: CMakeLists.txt  CannonMatrixMultiplicationMPI.cpp  CannonMatrixMultiplicationMPI.h  FoxMatrixMultiplicationMPI.cpp  FoxMatrixMultiplicationMPI.h  LineMatrixMultiplicationMPI.cpp  LineMatrixMultiplicationMPI.h  Matrix.cpp  Matrix.h  MatrixMultiplicationMPI.cpp  MatrixMultiplicationMPI.h  OrdinaryMatrixMultiplicationMPI.cpp  OrdinaryMatrixMultiplicationMPI.h  main.cpp  table.xlsx
